# workwise

./: plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: keylogger.rs  lib.rs  logger.rs
